--- a/src/app/Executive/Account-Master/account-master.component.html
+++ b/src/app/Executive/Account-Master/account-master.component.html
@@ -5,9 +5,36 @@
 <p>Status for all of the Accounts will be here as well </p>-->
 
 
-    <!--Heading-->
-    <div class="brand-logo center">
+   <!--Heading-->
+<div class="brand-logo center">
     <h3>View Account</h3>
+    </div>
+    <!--View-->
+    <!--Display the 3 buttons -->
+    <div class="container-fluid">
+        <table>
+            <tr>
+                <th>Customer ID</th>
+                <th>Account Type</th>
+                <th>Status</th>
+                <th>Message</th>
+                 <th>Last Updated</th>
+            </tr>
+           
+            <tr *ngFor="let acc of this.accountList">
+                <td>{{ acc.Cust_Id }}</td>
+                <td>{{ acc.Acct_Type }}</td>
+                <td>LIVE</td>
+                <td>{{acc.TR_Last_Date}}</td>-->
+                <td> 
+                    <button  class="btn btn-sm btn-outline-primary" (click)="deleteAccount(acc.Acct_Id)">Delete</button> 
+                </td>
+                <td> 
+                    <button  class="btn btn-sm btn-outline-primary" routerLink="/Executive/Account">Refresh</button> 
+                </td>
+            </tr>
+        </table>
+        <hr>
     </div>
     
     
