--- a/src/app/Auth/Login/login.component.html
+++ b/src/app/Auth/Login/login.component.html
@@ -1,5 +1,4 @@
-
-    <!--
+<!--
     <div class="container">
       <div class="row">
         <div class="col s8 offset-s2">
@@ -23,43 +22,63 @@
         </div>
       </div>
     </div>-->
-    <!--Login-->
-    <div class="brand-logo center">
-    <h3>Login</h3>
-    </div>
-    <div class="container">
-    <div class="col s6 offset-s3">
+<!--Login-->
+<div class="brand-logo center">
+  <h3>Login</h3>
+</div>
+<div class="container">
+  <div class="col s6 offset-s3">
     <div class="card">
-    
-    <!--<div class="col s6">
+      <!--<div class="col s6">
      <img src="/assets/img/download.jpeg",style="width:25px;height:25px;" class="offset - s3">
     </div>-->
-    <div class="card-content">
-    <form #registerForm="ngForm">
-    <div class="row">
-    <div class="input-field col s12">
-    <!-- <i class="material-icons.prefix"> mail_outline </i>--> 
-    <input type="text" name="Email" #Email ngModel required [pattern]="emailPattern">
-    <label> Email</label>
+      <div class="card-content">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+
+          <div class="form-group">
+            <div class="input-field col s12">
+              <!-- <i class="material-icons.prefix"> mail_outline </i>-->
+              <input
+                type="email"
+                formControlName="Email"
+                ngModel
+                required
+              />
+              
+              <label>Email</label>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-field col s12">
+              <!--<i class="material-icons.prefix"> account_circle </i> -->
+              <input
+                type="Password"
+                formControlName="Password"
+                ngModel
+                required
+              />
+              <label> Password</label>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-field col s12">
+              <button
+                class="btn-large btn-submit"
+                type="submit"
+                [disabled]="!form.valid"
+              >
+                Submit
+              </button>
+              <h6 style="text-align: center">
+                If you don't have account?
+                <a routerLink="/Sign-Up">Sign Up Here</a>
+              </h6>
+              <br />
+              <br />
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
-    </div>
-    <div class="row">
-    <div class="input-field col s12">
-    <!--<i class="material-icons.prefix"> account_circle </i> -->
-    <input type="Password" name="Password" #Password ngModel required>
-    <label> Password</label>
-    </div>
-    </div>
-    <div class="row">
-    <div class="input-field col s12">
-    <button class="btn-large btn-submit" type="submit" [disabled]="!registerForm.valid">Submit</button>
-    <h6 style="text-align:center">If you don't have account?  <a routerLink="/Sign-Up">Sign Up Here</a> </h6>
-      <br>
-      <br>
-    </div>
-    </div>
-    </form>
-    </div>
-    </div>
-    </div>
-    </div>
+  </div>
+</div>
