--- a/src/app/Teller/Account-Transfer/account-transfer.component.html
+++ b/src/app/Teller/Account-Transfer/account-transfer.component.html
@@ -6,56 +6,71 @@
 <p>This screen is just a single search box, do not get all accounts here the Teller has to search for a specific account here</p>-->
 
 
-    <!--Heading-->
-    <div class="brand-logo center">
+<!--Heading-->
+<div class="brand-logo center">
     <h3>Transfer</h3>
-    </div>
-    <!--Form-->
-    <div class="container">
+</div>
+<!--Form-->
+<div class="container">
     <div class="col s6 offset-s3">
-    <div class="card">
-    <div class="card-content">
-    <form  name="" #registerForm="ngForm" [formGroup]="form" (ngSubmit)="postTransaction()">
-    <div class="row">
-    <div class="input-field col s12">
-    <input formControlName="amount" type="number" name="">
-    <label> Transfer Amount</label>
+        <div class="card">
+            <div class="card-content">
+                <form name="form" #registerForm="ngForm" [formGroup]="form" (ngSubmit)="postTransaction()">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input formControlName="amount" type="number" name="amount" ngModel pattern="[\d]+">
+                            <div *ngIf="form.get('amount').invalid && form.get('amount').touched" class="alert alert-danger">
+                                <div *ngIf="form.get('amount').errors.required"> Transfer Amount is required.</div>
+                                <!-- <div *ngIf="form.get('amount').errors.pattern === true"> Customer Deposit should be a positve value.</div> -->
+                                <div *ngIf="form.get('amount').errors.max"> Transfer Amount has a max size of 20 numbers.</div>
+                                <div *ngIf="form.get('amount').errors.min"> Transfer Amount should be a positve value.</div> 
+                            </div>
+                            <label> Transfer Amount</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <p> Source Account: {{this.sourceAccount.Acct_Id}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input formControlName="target" type="number" name="target" ngModel pattern="[0-9]{9}">
+                            <div *ngIf="form.get('target').invalid && form.get('target').touched" class="alert alert-danger">
+                                <div *ngIf="form.get('target').errors.required"> Target Account is required.</div>
+                                <div *ngIf="form.get('targer').errors.pattern"> Target Account should be a 9 digit number.</div>
+                            </div>
+                            <label> Target Account (To)</label>
+                        </div>
+                        
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <button class="btn-large btn-submit" type="submit"
+                                [disabled]="!registerForm.valid">Transfer</button>
+                        </div>
+                    </div>
+                </form>
+                <button class="btn btn-primary btn-sm" (click)="getTargetAccount()">Validate Target Account</button>
+            </div>
+        </div>
     </div>
-    </div>
-    <div class="row">
-    <div class="input-field col s12">
-    <input value="Source Account: {{this.sourceAccount.Acct_Id}}" disabled>
-    </div>
-    </div>
-    <div class="row">
-    <div class="input-field col s12">
-    <input formControlName="target" type="number" name="">
-    <label> Target Account (To)</label>
-    </div>
-    <button class="btn btn-primary btn-sm" (click)="getTargetAccount()" >Validate</button>
-    </div>
-    <div class="row">
-    <div class="input-field col s12">
-    <button class="btn-large btn-submit" type="submit" [disabled]="!registerForm.valid">Transfer</button>
-    </div>
-    </div>
-    </form>
-    </div>
-    </div>
-    </div>
-    
+
     <!--Display the records -->
     <div class="container-fluid">
         <table>
             <tr>
                 <th>Acccount ID</th>
-                <th>Balance Before Transfer</th>    <!--Before Transfer-->
-                <th>Balance After Transfer</th> <!--After Deposit-->
-                <th>Target Acount ID</th> 
-                <th>Balance Before Transfer</th>    <!--Before Transfer-->
+                <th>Balance Before Transfer</th>
+                <!--Before Transfer-->
+                <th>Balance After Transfer</th>
+                <!--After Deposit-->
+                <th>Target Acount ID</th>
+                <th>Balance Before Transfer</th>
+                <!--Before Transfer-->
                 <th>Balance After Transfer</th>
             </tr>
-             <tr>
+            <tr>
                 <td>{{this.sourceAccount.Acct_Id}}</td>
                 <td>{{ this.sourceAccount.Balance}}</td>
                 <td>{{ this.getNewBalance("source")}}</td>
@@ -63,17 +78,13 @@
                 <td>{{ this.targetAccount.Balance }}</td>
                 <td>{{ this.getNewBalance("target")}}</td>
 
-                
-                
-            
-                <td> 
-                    <button  class="btn btn-sm btn-outline-primary" routerLink="/Teller">Back</button> 
+
+
+
+                <td>
+                    <button class="btn btn-sm btn-outline-primary" routerLink="/Teller">Back</button>
                 </td>
-            </tr>    
+            </tr>
         </table>
         <hr>
     </div>
-    
-
-    
-    
