--- a/src/app/Teller/Account-Deposit/account-deposit.component.html
+++ b/src/app/Teller/Account-Deposit/account-deposit.component.html
@@ -48,9 +48,9 @@
                 <!--After Deposit-->
             </tr>
             <tr>
-                <td>{{this.account.Cust_Id}}</td>
-                <td>{{this.account.Acct_Id}}</td>
-                <td>{{this.account.Balance}}</td>
+                <td>{{this.account.custId}}</td>
+                <td>{{this.account.acctId}}</td>
+                <td>{{this.account.balance}}</td>
                 <td>{{getNewBalance()}}</td>
             </tr>
             <td>
