--- a/src/app/Teller/Account-Withdraw/account-withdraw.component.html
+++ b/src/app/Teller/Account-Withdraw/account-withdraw.component.html
@@ -47,8 +47,8 @@
                 <th>Latest Balance</th> <!--After Withdraw-->
             </tr>
             <tr>
-                <td>{{ this.account.Acct_Id }}</td>
-                <td>{{ this.account.Balance }}</td>
+                <td>{{ this.account.acctId }}</td>
+                <td>{{ this.account.balance }}</td>
                 <td>{{ getNewBalance() }}</td>
                 <td> 
                     <button  class="btn btn-sm btn-outline-primary" routerLink="/Teller">Back</button> 
