--- a/src/app/Executive/Account-Create/account-create.component.html
+++ b/src/app/Executive/Account-Create/account-create.component.html
@@ -25,8 +25,8 @@
           <div class="form-group">
             <div class="input-field col s12">
               <select id="Acct_Type" formControlName="Acct_Type" class="form-control">
-                <option>Checking</option>
-                <option>Savings</option>
+                <option value="C">Checking</option>
+                <option value="S">Savings</option>
               </select>
               <div *ngIf="form.get('Acct_Type').invalid && form.get('Acct_Type').touched" class="alert alert-danger">
                 <div *ngIf="form.get('Acct_Type').errors.required"> Customer Account Type is required.</div>
