--- a/src/app/Teller/Account-Deposit/account-deposit.component.html
+++ b/src/app/Teller/Account-Deposit/account-deposit.component.html
@@ -50,12 +50,9 @@
             <tr>
                 <td>{{this.account.custId}}</td>
                 <td>{{this.account.acctId}}</td>
-                <td>{{this.account.balance}}</td>
-                <td>{{getNewBalance()}}</td>
+                <td>${{this.account.balance}}</td>
+                <td>${{getNewBalance()}}</td>
             </tr>
-            <td>
-                <button class="btn btn-sm btn-outline-primary" routerLink="/Teller">Back</button>
-            </td>
         </table>
         <hr>
     </div>
