--- a/src/app/Executive/Customer-Create/customer-create.component.html
+++ b/src/app/Executive/Customer-Create/customer-create.component.html
@@ -1,6 +1,6 @@
 <!--Heading-->
 <div class="brand-logo center">
-  <h3>Create Customer</h3>
+  <h3>Create Customer </h3> <div ngIf="this.inProg" class="spinner-border"></div>
 </div>
 <!--Form-->
 <div class="container">
