--- a/src/app/Auth/Login/login.component.html
+++ b/src/app/Auth/Login/login.component.html
@@ -24,7 +24,7 @@
     </div>-->
 <!--Login-->
 <div class="brand-logo center">
-  <h3>Login</h3>
+  <h3>Login</h3><div ngIf="this.inProg" class="spinner-border"></div>
 </div>
 <div class="container">
   <div class="col s6 offset-s3">
