--- a/src/app/Executive/Account-Master/account-master.component.html
+++ b/src/app/Executive/Account-Master/account-master.component.html
@@ -7,7 +7,7 @@
 
    <!--Heading-->
 <div class="brand-logo center">
-    <h3>View Account</h3>
+    <h3>View Account </h3> <div ngIf="this.inProg" class="spinner-border"></div>
     </div>
     <!--View-->
     <!--Display the 3 buttons -->
