--- a/src/app/Executive/Customer-Master/customer-master.component.html
+++ b/src/app/Executive/Customer-Master/customer-master.component.html
@@ -6,7 +6,7 @@
 
     <!--Heading-->
 <div class="brand-logo center">
-    <h3>View Customer</h3>
+    <h3>View Customer</h3><div ngIf="this.inProg" class="spinner-border"></div>
     </div>
     <!--View-->
     <!--Display the 3 buttons -->
