--- a/src/app/Teller/Account-Statement/account-statement.component.html
+++ b/src/app/Teller/Account-Statement/account-statement.component.html
@@ -9,7 +9,7 @@
 
     <!--Heading-->
     <div class="brand-logo center">
-    <h3>Get Statements</h3>
+    <h3>Get Statements</h3><div ngIf="this.inProg" class="spinner-border"></div>
     </div>
     <!--Form-->
     <div class="container">
